[package]
name = "ibackuptool2"
version = "0.1.0"
authors = ["Rich Infante <rich@richinfante.com>"]
edition = "2018"

[dependencies]
rusqlite = "0.17.0"
plist = "0.4.1"
dirs = "1.0.5"
rust-crypto = "^0.2"
colored = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10.5"
uuid = { version = "0.7", features = ["v4"] }
hex = "0.3.2"
ring = "0.14.6"
log = "0.4.8"
env_logger = "0.7.0"
tempdir = "0.3.7"
rpassword = "4.0.1"